# EmbeddedAudioBlogPost

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  build-esp32s3.sh  build-host.sh  build-stm32.sh  run-esp32s3.sh  run-host.sh  run-stm32.sh  sdkconfig
build_env/: Dockerfile  docker_bash.sh  docker_build.sh  docker_run.sh
source/: CMakeLists.txt
source/app/: CMakeLists.txt  main.cpp
source/core_utils/: CMakeLists.txt  dummy.cpp  helpers.hpp  lifetime_obj.hpp  singleton.hpp  time.hpp  types.h
source/core_utils/audio_buffer/: CMakeLists.txt  audio_buffer.hpp  circular_buffer.hpp
source/osal/: CMakeLists.txt
source/osal/FreeRTOS/: CMakeLists.txt  osal.c
source/osal/Linux/: CMakeLists.txt  osal.c
source/osal/common/: CMakeLists.txt  osal.h  osal_common.c
source/osal/common/config/: FreeRTOSConfig.h
source/peripherals/: CMakeLists.txt
source/peripherals/i2s/: CMakeLists.txt
source/peripherals/i2s/esp32/: CMakeLists.txt  i2s.cpp  i2s.hpp
source/peripherals/i2s/stm32/: CMakeLists.txt  i2s.cpp  i2s.hpp
source/peripherals/timer/: CMakeLists.txt  timer_int.hpp
source/peripherals/timer/esp32/: CMakeLists.txt  timer.cpp  timer.hpp
source/platform/: CMakeLists.txt
source/platform/assert/: CMakeLists.txt
source/platform/common/: CMakeLists.txt  assert.cpp  assert.hpp  logger.hpp  platform.hpp
source/platform/esp32/: CMakeLists.txt  config.hpp  esp32_platform.cpp  esp32_platform.hpp  esp32s3_firLoop_float.s  logger.cpp
source/platform/host/: CMakeLists.txt  host_platform.cpp  host_platform.hpp
source/platform/stm32/: CMakeLists.txt  config.hpp  stm32_platform.cpp  stm32_platform.hpp
source/platform/stm32/cfg/: stm32f7xx_hal_conf.h
source/utils/: CMakeLists.txt
source/utils/dsp/: CMakeLists.txt
source/utils/dsp/audio_pipeline/: CMakeLists.txt  audio_pipeline.hpp  audio_processing_ctx.hpp
source/utils/dsp/audio_processors/: CMakeLists.txt  audio_processor.hpp  filter_processor.hpp  i2s_processor.hpp
source/utils/dsp/common/: CMakeLists.txt  dsp_common.hpp  dsp_self_test.hpp  dsp_types.hpp
source/utils/dsp/esp32/: CMakeLists.txt
source/utils/dsp/filter/: CMakeLists.txt  biquad_filter.cpp  biquad_filter.hpp  fir_filter.cpp  fir_filter.hpp
source/utils/dsp/simd/: simd_macros.hpp
source/utils/thread/: CMakeLists.txt  thread.cpp  thread.hpp
