set(srcs            "esp-dsp/modules/common/misc/dsps_pwroftwo.cpp"
                    "esp-dsp/modules/common/misc/aes3_tie_log.c"
                    "esp-dsp/modules/dotprod/float/dsps_dotprod_f32_ae32.S"
                    "esp-dsp/modules/dotprod/float/dsps_dotprod_f32_m_ae32.S"
                    "esp-dsp/modules/dotprod/float/dsps_dotprode_f32_ae32.S"
                    "esp-dsp/modules/dotprod/float/dsps_dotprode_f32_m_ae32.S"
                    "esp-dsp/modules/dotprod/float/dsps_dotprod_f32_ansi.c"
                    "esp-dsp/modules/dotprod/float/dsps_dotprode_f32_ansi.c"
                    "esp-dsp/modules/dotprod/float/dsps_dotprod_f32_aes3.S"

                    "esp-dsp/modules/dotprod/fixed/dsps_dotprod_s16_ae32.S"
                    "esp-dsp/modules/dotprod/fixed/dsps_dotprod_s16_m_ae32.S"
                    "esp-dsp/modules/dotprod/fixed/dsps_dotprod_s16_ansi.c"

                    "esp-dsp/modules/dotprod/float/dspi_dotprod_f32_ansi.c"
                    "esp-dsp/modules/dotprod/float/dspi_dotprod_off_f32_ansi.c"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_s16_ansi.c"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_u16_ansi.c"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_s8_ansi.c"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_u8_ansi.c"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_s16_ansi.c"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_u16_ansi.c"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_s8_ansi.c"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_u8_ansi.c"

                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_s16_aes3.S"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_u16_aes3.S"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_s16_aes3.S"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_u16_aes3.S"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_s8_aes3.S"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_u8_aes3.S"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_u8_aes3.S"
                    "esp-dsp/modules/dotprod/fixed/dspi_dotprod_off_s8_aes3.S"

                    # "esp-dsp/modules/matrix/mul/float/dspm_mult_3x3x1_f32_ae32.S"
                    # "esp-dsp/modules/matrix/mul/float/dspm_mult_3x3x3_f32_ae32.S"
                    # "esp-dsp/modules/matrix/mul/float/dspm_mult_4x4x1_f32_ae32.S"
                    # "esp-dsp/modules/matrix/mul/float/dspm_mult_4x4x4_f32_ae32.S"
                    # "esp-dsp/modules/matrix/mul/float/dspm_mult_f32_ae32.S"
                    # "esp-dsp/modules/matrix/mul/float/dspm_mult_f32_aes3.S"
                    # "esp-dsp/modules/matrix/mul/float/dspm_mult_f32_ansi.c"
                    # "esp-dsp/modules/matrix/mul/float/dspm_mult_ex_f32_ansi.c"
                    # "esp-dsp/modules/matrix/mul/float/dspm_mult_ex_f32_ae32.S"
                    # "esp-dsp/modules/matrix/mul/float/dspm_mult_ex_f32_aes3.S"
                    # "esp-dsp/modules/matrix/mul/fixed/dspm_mult_s16_ae32.S"
                    # "esp-dsp/modules/matrix/mul/fixed/dspm_mult_s16_m_ae32_vector.S"
                    # "esp-dsp/modules/matrix/mul/fixed/dspm_mult_s16_m_ae32.S"
                    # "esp-dsp/modules/matrix/mul/fixed/dspm_mult_s16_ansi.c"
                    # "esp-dsp/modules/matrix/mul/fixed/dspm_mult_s16_aes3.S"
                    # "esp-dsp/modules/matrix/add/float/dspm_add_f32_ansi.c"
                    # "esp-dsp/modules/matrix/add/float/dspm_add_f32_ae32.S"
                    # "esp-dsp/modules/matrix/addc/float/dspm_addc_f32_ansi.c"
                    # "esp-dsp/modules/matrix/addc/float/dspm_addc_f32_ae32.S"
                    # "esp-dsp/modules/matrix/mulc/float/dspm_mulc_f32_ansi.c"
                    # "esp-dsp/modules/matrix/mulc/float/dspm_mulc_f32_ae32.S"
                    # "esp-dsp/modules/matrix/sub/float/dspm_sub_f32_ansi.c"
                    # "esp-dsp/modules/matrix/sub/float/dspm_sub_f32_ae32.S"
                    # "esp-dsp/modules/matrix/mat/mat.cpp"

                    "esp-dsp/modules/math/mulc/float/dsps_mulc_f32_ansi.c"
                    "esp-dsp/modules/math/addc/float/dsps_addc_f32_ansi.c"
                    "esp-dsp/modules/math/mulc/fixed/dsps_mulc_s16_ansi.c"
                    "esp-dsp/modules/math/mulc/fixed/dsps_mulc_s16_ae32.S"
                    "esp-dsp/modules/math/add/float/dsps_add_f32_ansi.c"
                    "esp-dsp/modules/math/add/fixed/dsps_add_s16_ansi.c"
                    "esp-dsp/modules/math/add/fixed/dsps_add_s16_ae32.S"
                    "esp-dsp/modules/math/add/fixed/dsps_add_s16_aes3.S"
                    "esp-dsp/modules/math/add/fixed/dsps_add_s8_ansi.c"
                    "esp-dsp/modules/math/add/fixed/dsps_add_s8_aes3.S"

                    "esp-dsp/modules/math/sub/float/dsps_sub_f32_ansi.c"
                    "esp-dsp/modules/math/sub/fixed/dsps_sub_s16_ansi.c"
                    "esp-dsp/modules/math/sub/fixed/dsps_sub_s16_ae32.S"
                    "esp-dsp/modules/math/sub/fixed/dsps_sub_s16_aes3.S"
                    "esp-dsp/modules/math/sub/fixed/dsps_sub_s8_ansi.c"
                    "esp-dsp/modules/math/sub/fixed/dsps_sub_s8_aes3.S"

                    "esp-dsp/modules/math/mul/float/dsps_mul_f32_ansi.c"
                    "esp-dsp/modules/math/mul/fixed/dsps_mul_s16_ansi.c"
                    "esp-dsp/modules/math/mul/fixed/dsps_mul_s16_ae32.S"
                    "esp-dsp/modules/math/mul/fixed/dsps_mul_s16_aes3.S"
                    "esp-dsp/modules/math/mul/fixed/dsps_mul_s8_ansi.c"
                    "esp-dsp/modules/math/mul/fixed/dsps_mul_s8_aes3.S"

                    "esp-dsp/modules/math/mulc/float/dsps_mulc_f32_ae32.S"
                    "esp-dsp/modules/math/addc/float/dsps_addc_f32_ae32.S"
                    "esp-dsp/modules/math/add/float/dsps_add_f32_ae32.S"
                    "esp-dsp/modules/math/sub/float/dsps_sub_f32_ae32.S"
                    "esp-dsp/modules/math/mul/float/dsps_mul_f32_ae32.S"
                    "esp-dsp/modules/math/sqrt/float/dsps_sqrt_f32_ansi.c"

                    "esp-dsp/modules/fft/float/dsps_fft2r_fc32_ae32_.S"
                    "esp-dsp/modules/fft/float/dsps_fft2r_fc32_aes3_.S"
                    "esp-dsp/modules/fft/float/dsps_fft2r_fc32_ansi.c"
                    "esp-dsp/modules/fft/float/dsps_fft2r_fc32_ae32.c"
                    "esp-dsp/modules/fft/float/dsps_bit_rev_lookup_fc32_aes3.S"
                    "esp-dsp/modules/fft/float/dsps_fft4r_fc32_ansi.c"
                    "esp-dsp/modules/fft/float/dsps_fft4r_fc32_ae32.c"
                    "esp-dsp/modules/fft/float/dsps_fft2r_bitrev_tables_fc32.c"
                    "esp-dsp/modules/fft/float/dsps_fft4r_bitrev_tables_fc32.c"
                    "esp-dsp/modules/fft/fixed/dsps_fft2r_sc16_ae32.S"
                    "esp-dsp/modules/fft/fixed/dsps_fft2r_sc16_ansi.c"
                    "esp-dsp/modules/fft/fixed/dsps_fft2r_sc16_aes3.S"

                    "esp-dsp/modules/dct/float/dsps_dct_f32.c"
                    "esp-dsp/modules/support/snr/float/dsps_snr_f32.cpp"
                    "esp-dsp/modules/support/sfdr/float/dsps_sfdr_f32.cpp"
                    "esp-dsp/modules/support/misc/dsps_d_gen.c"
                    "esp-dsp/modules/support/misc/dsps_h_gen.c"     
                    "esp-dsp/modules/support/misc/dsps_tone_gen.c"
                    "esp-dsp/modules/support/cplx_gen/dsps_cplx_gen.c"
                    "esp-dsp/modules/support/cplx_gen/dsps_cplx_gen.S"
                    "esp-dsp/modules/support/cplx_gen/dsps_cplx_gen_init.c"
                    "esp-dsp/modules/support/mem/esp32s3/dsps_memset_aes3.S"
                    "esp-dsp/modules/support/mem/esp32s3/dsps_memcpy_aes3.S"
                    "esp-dsp/modules/support/view/dsps_view.cpp"
                    "esp-dsp/modules/windows/hann/float/dsps_wind_hann_f32.c"
                    "esp-dsp/modules/windows/blackman/float/dsps_wind_blackman_f32.c"
                    "esp-dsp/modules/windows/blackman_harris/float/dsps_wind_blackman_harris_f32.c"
                    "esp-dsp/modules/windows/blackman_nuttall/float/dsps_wind_blackman_nuttall_f32.c"
                    "esp-dsp/modules/windows/nuttall/float/dsps_wind_nuttall_f32.c"
                    "esp-dsp/modules/windows/flat_top/float/dsps_wind_flat_top_f32.c"
                    "esp-dsp/modules/conv/float/dsps_conv_f32_ansi.c"
                    "esp-dsp/modules/conv/float/dsps_conv_f32_ae32.S"
                    "esp-dsp/modules/conv/float/dsps_corr_f32_ansi.c"
                    "esp-dsp/modules/conv/float/dsps_corr_f32_ae32.S"
                    "esp-dsp/modules/conv/float/dsps_ccorr_f32_ansi.c"
                    "esp-dsp/modules/conv/float/dsps_ccorr_f32_ae32.S"
                    "esp-dsp/modules/iir/biquad/dsps_biquad_f32_ae32.S"
                    "esp-dsp/modules/iir/biquad/dsps_biquad_f32_aes3.S"
                    "esp-dsp/modules/iir/biquad/dsps_biquad_f32_ansi.c"
                    "esp-dsp/modules/iir/biquad/dsps_biquad_gen_f32.c"
                    "esp-dsp/modules/fir/float/dsps_fir_f32_ae32.S"
                    "esp-dsp/modules/fir/float/dsps_fir_f32_aes3.S"
                    "esp-dsp/modules/fir/float/dsps_fird_f32_ae32.S"
                    "esp-dsp/modules/fir/float/dsps_fird_f32_aes3.S"
                    "esp-dsp/modules/fir/float/dsps_fir_f32_ansi.c"
                    "esp-dsp/modules/fir/float/dsps_fir_init_f32.c"
                    "esp-dsp/modules/fir/float/dsps_fird_f32_ansi.c"
                    "esp-dsp/modules/fir/float/dsps_fird_init_f32.c"
                    "esp-dsp/modules/fir/fixed/dsps_fird_init_s16.c"
                    "esp-dsp/modules/fir/fixed/dsps_fird_s16_ansi.c"
                    "esp-dsp/modules/fir/fixed/dsps_fird_s16_ae32.S"
                    "esp-dsp/modules/fir/fixed/dsps_fir_s16_m_ae32.S"
                    "esp-dsp/modules/fir/fixed/dsps_fird_s16_aes3.S"
# EKF files
                    # "esp-dsp/modules/kalman/ekf/common/ekf.cpp"
                    # "esp-dsp/modules/kalman/ekf_imu13states/ekf_imu13states.cpp"
                    )



set(include_dirs                "esp-dsp/modules/dotprod/include"
                                "esp-dsp/modules/support/include"
                                "esp-dsp/modules/support/mem/include"
                                "esp-dsp/modules/windows/include"
                                "esp-dsp/modules/windows/hann/include"
                                "esp-dsp/modules/windows/blackman/include"
                                "esp-dsp/modules/windows/blackman_harris/include"
                                "esp-dsp/modules/windows/blackman_nuttall/include"
                                "esp-dsp/modules/windows/nuttall/include"
                                "esp-dsp/modules/windows/flat_top/include"
                                "esp-dsp/modules/iir/include"
                                "esp-dsp/modules/fir/include"
                                "esp-dsp/modules/math/include"
                                "esp-dsp/modules/math/add/include"
                                "esp-dsp/modules/math/sub/include"
                                "esp-dsp/modules/math/mul/include"
                                "esp-dsp/modules/math/addc/include"
                                "esp-dsp/modules/math/mulc/include"
                                "esp-dsp/modules/math/sqrt/include"
                                # "esp-dsp/modules/matrix/mul/include"
                                # "esp-dsp/modules/matrix/add/include"
                                # "esp-dsp/modules/matrix/addc/include"
                                # "esp-dsp/modules/matrix/mulc/include"
                                # "esp-dsp/modules/matrix/sub/include"
                                # "esp-dsp/modules/matrix/include"
                                "esp-dsp/modules/fft/include"
                                "esp-dsp/modules/dct/include"
                                "esp-dsp/modules/conv/include"
                                "esp-dsp/modules/common/include"
                                # "esp-dsp/modules/matrix/mul/test/include"
# EKF files
                                # "esp-dsp/modules/kalman/ekf/include"
                                # "esp-dsp/modules/kalman/ekf_imu13states/include"
)

set(priv_include_dirs           "esp-dsp/modules/dotprod/float"
                                "esp-dsp/modules/dotprod/fixed")

add_library(utils_esp_dsp)

target_compile_features(utils_esp_dsp INTERFACE cxx_std_17)

target_include_directories(utils_esp_dsp PUBLIC ${include_dirs})

target_include_directories(utils_esp_dsp PRIVATE ${priv_include_dirs})

target_sources(utils_esp_dsp
    PRIVATE ${srcs}
)

target_compile_definitions(utils_esp_dsp PRIVATE CONFIG_DSP_OPTIMIZED)

target_link_libraries(utils_esp_dsp PRIVATE idf::log)
